--- a/public/main.css
+++ b/public/main.css
@@ -2,8 +2,8 @@
 #chatView
 {
     border:1px solid black;
-    width:200px;
-    height:200px;
+    width: 100%;
+    height: 200px;
     overflow-y:scroll;
 }
 
@@ -19,7 +19,7 @@
 
 #chat_input
 {
-    width: 200px;
+    width: 100%;
 }
 
 .status_message
@@ -30,6 +30,11 @@
 .not_connected #chat_room_info
 {
     display: none;
+}
+
+#chat_room_info
+{
+		height: 100px
 }
 
 #chat_user_list_title
